[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/playerObjects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/background/maps/BaseLevel.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/maps/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/userInerface/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/maps/BaseLevel.gd" type="Script" id=5]
[ext_resource path="res://scenes/mapObjects/Portal.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/mapObjects/Ladder.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 112.5, 43.5 )

[node name="Map" type="Node"]
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="BaseLevel" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 361, -545.5 )
scale = Vector2( 1, 1.42913 )
texture = ExtResource( 2 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]
position = Vector2( 234, -17 )
collision_layer = 1
tile_data = PoolIntArray( -1245188, 0, 0, -1245187, 0, 1, -1245186, 0, 1, -1245185, 0, 1, -1310720, 0, 1, -1310719, 0, 1, -1310718, 0, 1, -1310717, 0, 1, -1310716, 0, 1, -1310715, 0, 1, -1310714, 0, 1, -1310713, 0, 2, -1179652, 0, 65536, -1179651, 0, 65537, -1179650, 0, 65537, -1179649, 0, 65537, -1245184, 0, 65537, -1245183, 0, 65537, -1245182, 0, 65537, -1245181, 0, 65537, -1245180, 0, 65537, -1245179, 0, 65537, -1245178, 0, 65537, -1245177, 0, 65538, -1114125, 0, 0, -1114124, 0, 1, -1114123, 0, 1, -1114122, 0, 2, -1114116, 0, 131072, -1114115, 0, 131073, -1114114, 0, 131073, -1114113, 0, 131073, -1179648, 0, 131073, -1179647, 0, 131073, -1179646, 0, 131073, -1179645, 0, 131073, -1179644, 0, 131073, -1179643, 0, 131073, -1179642, 0, 131073, -1179641, 0, 131074, -1048589, 0, 65536, -1048588, 0, 65537, -1048587, 0, 65537, -1048586, 0, 65538, -983053, 0, 65536, -983052, 0, 65537, -983051, 0, 65537, -983050, 0, 65538, -917517, 0, 65536, -917516, 0, 65537, -917515, 0, 65537, -917514, 0, 65538, -851981, 0, 65536, -851980, 0, 65537, -851979, 0, 65537, -851978, 0, 65538, -786445, 0, 65536, -786444, 0, 65537, -786443, 0, 65537, -786442, 0, 65538, -720909, 0, 65536, -720908, 0, 65537, -720907, 0, 65537, -720906, 0, 65538, -655373, 0, 65536, -655372, 0, 65537, -655371, 0, 65537, -655370, 0, 65539, -655369, 0, 1, -655368, 0, 1, -655367, 0, 1, -655366, 0, 2, -720861, 0, 0, -720860, 0, 1, -720859, 0, 1, -720858, 0, 2, -589837, 0, 65536, -589836, 0, 65537, -589835, 0, 65537, -589834, 0, 65537, -589833, 0, 65537, -589832, 0, 65537, -589831, 0, 65537, -589830, 0, 65538, -655325, 0, 65536, -655324, 0, 65537, -655323, 0, 65537, -655322, 0, 65538, -524301, 0, 65536, -524300, 0, 65537, -524299, 0, 65537, -524298, 0, 65537, -524297, 0, 65537, -524296, 0, 65537, -524295, 0, 65537, -524294, 0, 65538, -589789, 0, 65536, -589788, 0, 65537, -589787, 0, 65537, -589786, 0, 65538, -458765, 0, 65536, -458764, 0, 65537, -458763, 0, 65537, -458762, 0, 65537, -458761, 0, 65537, -458760, 0, 65537, -458759, 0, 65537, -458758, 0, 65538, -524253, 0, 65536, -524252, 0, 65537, -524251, 0, 65537, -524250, 0, 65538, -393229, 0, 65536, -393228, 0, 65537, -393227, 0, 65537, -393226, 0, 65537, -393225, 0, 65537, -393224, 0, 65537, -393223, 0, 65537, -393222, 0, 65538, -458717, 0, 65536, -458716, 0, 65537, -458715, 0, 65537, -458714, 0, 65538, -327693, 0, 65536, -327692, 0, 65537, -327691, 0, 65537, -327690, 0, 65537, -327689, 0, 65537, -327688, 0, 65537, -327687, 0, 65537, -327686, 0, 65538, -393181, 0, 65536, -393180, 0, 65537, -393179, 0, 65537, -393178, 0, 65538, -262157, 0, 65536, -262156, 0, 65537, -262155, 0, 65537, -262154, 0, 65537, -262153, 0, 65537, -262152, 0, 65537, -262151, 0, 65537, -262150, 0, 65538, -327645, 0, 65536, -327644, 0, 65537, -327643, 0, 65537, -327642, 0, 65538, -196621, 0, 65536, -196620, 0, 65537, -196619, 0, 65537, -196618, 0, 65537, -196617, 0, 65537, -196616, 0, 65537, -196615, 0, 65537, -196614, 0, 65538, -262109, 0, 65536, -262108, 0, 65537, -262107, 0, 65537, -262106, 0, 65538, -131085, 0, 65536, -131084, 0, 65537, -131083, 0, 65537, -131082, 0, 65537, -131081, 0, 65537, -131080, 0, 65537, -131079, 0, 65537, -131078, 0, 65538, -196573, 0, 65536, -196572, 0, 65537, -196571, 0, 65537, -196570, 0, 65538, -65549, 0, 65536, -65548, 0, 65537, -65547, 0, 65537, -65546, 0, 65537, -65545, 0, 65537, -65544, 0, 65537, -65543, 0, 65537, -65542, 0, 65539, -65541, 0, 1, -65540, 0, 1, -65539, 0, 1, -65538, 0, 1, -65537, 0, 1, -131072, 0, 1, -131071, 0, 1, -131070, 0, 1, -131069, 0, 1, -131068, 0, 1, -131067, 0, 1, -131066, 0, 1, -131065, 0, 1, -131064, 0, 1, -131063, 0, 1, -131062, 0, 1, -131061, 0, 1, -131060, 0, 1, -131059, 0, 1, -131058, 0, 1, -131057, 0, 1, -131056, 0, 1, -131055, 0, 1, -131054, 0, 1, -131053, 0, 1, -131052, 0, 1, -131051, 0, 1, -131050, 0, 1, -131049, 0, 1, -131048, 0, 1, -131047, 0, 1, -131046, 0, 1, -131045, 0, 1, -131044, 0, 1, -131043, 0, 1, -131042, 0, 1, -131041, 0, 1, -131040, 0, 1, -131039, 0, 1, -131038, 0, 1, -131037, 0, 65540, -131036, 0, 65537, -131035, 0, 65537, -131034, 0, 65538, -13, 0, 65536, -12, 0, 65537, -11, 0, 65537, -10, 0, 65537, -9, 0, 65537, -8, 0, 65537, -7, 0, 65537, -6, 0, 65537, -5, 0, 65537, -4, 0, 65537, -3, 0, 65537, -2, 0, 65537, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 65537, -65528, 0, 65537, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, -65523, 0, 65537, -65522, 0, 65537, -65521, 0, 65537, -65520, 0, 65537, -65519, 0, 65537, -65518, 0, 65537, -65517, 0, 65537, -65516, 0, 65537, -65515, 0, 65537, -65514, 0, 65537, -65513, 0, 65537, -65512, 0, 65537, -65511, 0, 65537, -65510, 0, 65537, -65509, 0, 65537, -65508, 0, 65537, -65507, 0, 65537, -65506, 0, 65537, -65505, 0, 65537, -65504, 0, 65537, -65503, 0, 65537, -65502, 0, 65537, -65501, 0, 65537, -65500, 0, 65537, -65499, 0, 65537, -65498, 0, 65538, 65523, 0, 65536, 65524, 0, 65537, 65525, 0, 65537, 65526, 0, 65537, 65527, 0, 65537, 65528, 0, 65537, 65529, 0, 65537, 65530, 0, 65537, 65531, 0, 65537, 65532, 0, 65537, 65533, 0, 65537, 65534, 0, 65537, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65537, 8, 0, 65537, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 65537, 13, 0, 65537, 14, 0, 65537, 15, 0, 65537, 16, 0, 65537, 17, 0, 65537, 18, 0, 65537, 19, 0, 65537, 20, 0, 65537, 21, 0, 65537, 22, 0, 65537, 23, 0, 65537, 24, 0, 65537, 25, 0, 65537, 26, 0, 65537, 27, 0, 65537, 28, 0, 65537, 29, 0, 65537, 30, 0, 65537, 31, 0, 65537, 32, 0, 65537, 33, 0, 65537, 34, 0, 65537, 35, 0, 65537, 36, 0, 65537, 37, 0, 65537, 38, 0, 65538, 131059, 0, 65536, 131060, 0, 65537, 131061, 0, 65537, 131062, 0, 65537, 131063, 0, 65537, 131064, 0, 65537, 131065, 0, 65537, 131066, 0, 65537, 131067, 0, 65537, 131068, 0, 65537, 131069, 0, 65537, 131070, 0, 65537, 131071, 0, 65537, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 65537, 65551, 0, 65537, 65552, 0, 65537, 65553, 0, 65537, 65554, 0, 65537, 65555, 0, 65537, 65556, 0, 65537, 65557, 0, 65537, 65558, 0, 65537, 65559, 0, 65537, 65560, 0, 65537, 65561, 0, 65537, 65562, 0, 65537, 65563, 0, 65537, 65564, 0, 65537, 65565, 0, 65537, 65566, 0, 65537, 65567, 0, 65537, 65568, 0, 65537, 65569, 0, 65537, 65570, 0, 65537, 65571, 0, 65537, 65572, 0, 65537, 65573, 0, 65537, 65574, 0, 65538, 196595, 0, 65536, 196596, 0, 65537, 196597, 0, 65537, 196598, 0, 65537, 196599, 0, 65537, 196600, 0, 65537, 196601, 0, 65537, 196602, 0, 65537, 196603, 0, 65537, 196604, 0, 65537, 196605, 0, 65537, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65537, 131090, 0, 65537, 131091, 0, 65537, 131092, 0, 65537, 131093, 0, 65537, 131094, 0, 65537, 131095, 0, 65537, 131096, 0, 65537, 131097, 0, 65537, 131098, 0, 65537, 131099, 0, 65537, 131100, 0, 65537, 131101, 0, 65537, 131102, 0, 65537, 131103, 0, 65537, 131104, 0, 65537, 131105, 0, 65537, 131106, 0, 65537, 131107, 0, 65537, 131108, 0, 65537, 131109, 0, 65537, 131110, 0, 65538, 262131, 0, 65536, 262132, 0, 65537, 262133, 0, 65537, 262134, 0, 65537, 262135, 0, 65537, 262136, 0, 65537, 262137, 0, 65537, 262138, 0, 65537, 262139, 0, 65537, 262140, 0, 65537, 262141, 0, 65537, 262142, 0, 65537, 262143, 0, 65537, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65537, 196622, 0, 65537, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65537, 196627, 0, 65537, 196628, 0, 65537, 196629, 0, 65537, 196630, 0, 65537, 196631, 0, 65537, 196632, 0, 65537, 196633, 0, 65537, 196634, 0, 65537, 196635, 0, 65537, 196636, 0, 65537, 196637, 0, 65537, 196638, 0, 65537, 196639, 0, 65537, 196640, 0, 65537, 196641, 0, 65537, 196642, 0, 65537, 196643, 0, 65537, 196644, 0, 65537, 196645, 0, 65537, 196646, 0, 65538, 327667, 0, 131072, 327668, 0, 131073, 327669, 0, 131073, 327670, 0, 131073, 327671, 0, 131073, 327672, 0, 131073, 327673, 0, 131073, 327674, 0, 131073, 327675, 0, 131073, 327676, 0, 131073, 327677, 0, 131073, 327678, 0, 131073, 327679, 0, 131073, 262144, 0, 131073, 262145, 0, 131073, 262146, 0, 131073, 262147, 0, 131073, 262148, 0, 131073, 262149, 0, 131073, 262150, 0, 131073, 262151, 0, 131073, 262152, 0, 131073, 262153, 0, 131073, 262154, 0, 131073, 262155, 0, 131073, 262156, 0, 131073, 262157, 0, 131073, 262158, 0, 131073, 262159, 0, 131073, 262160, 0, 131073, 262161, 0, 131073, 262162, 0, 131073, 262163, 0, 131073, 262164, 0, 131073, 262165, 0, 131073, 262166, 0, 131073, 262167, 0, 131073, 262168, 0, 131073, 262169, 0, 131073, 262170, 0, 131073, 262171, 0, 131073, 262172, 0, 131073, 262173, 0, 131073, 262174, 0, 131073, 262175, 0, 131073, 262176, 0, 131073, 262177, 0, 131073, 262178, 0, 131073, 262179, 0, 131073, 262180, 0, 131073, 262181, 0, 131073, 262182, 0, 131074 )

[node name="Label" type="Label" parent="."]
margin_left = 85.0
margin_top = -304.0
margin_right = 126.0
margin_bottom = -290.0
text = "MAP 1"

[node name="Monsters" type="Node" parent="."]

[node name="MapObjects" type="Node" parent="."]

[node name="Ladder" parent="MapObjects" instance=ExtResource( 10 )]
position = Vector2( 188, -102 )
scale = Vector2( 1, 0.95 )

[node name="noCol" type="Area2D" parent="MapObjects/Ladder"]
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapObjects/Ladder/noCol"]
position = Vector2( 82, -243.158 )
shape = SubResource( 1 )

[node name="Portal1" parent="MapObjects" instance=ExtResource( 8 )]
position = Vector2( 833, -89 )

[node name="OtherPlayers" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 95, -248 )

[node name="UI" parent="." instance=ExtResource( 4 )]
layer = 2

[connection signal="body_entered" from="MapObjects/Ladder/noCol" to="." method="_on_noCol_body_entered"]
[connection signal="body_exited" from="MapObjects/Ladder/noCol" to="." method="_on_noCol_body_exited"]
